--- a/TestArena/Assembly-CSharp-firstpass.csproj
+++ b/TestArena/Assembly-CSharp-firstpass.csproj
@@ -95,6 +95,7 @@
      <None Include="Assets\Plugins\Photon3Unity3D.xml" />
      <None Include="Assets\UnityChan\license.txt" />
      <None Include="Assets\Plugins\release_history.txt" />
+     <None Include="Assets\Resources\test.txt" />
      <None Include="Assets\UnityChan\Models\UnityChanShader\Shader\Unitychan_chara_fuku_ds.shader" />
      <None Include="Assets\UnityChan\Models\UnityChanShader\Shader\Unitychan_chara_eye_blend.shader" />
      <None Include="Assets\UnityChan\Models\UnityChanShader\Shader\Unitychan_chara_hair_ds.shader" />
